--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Inter;
-  src: url(/assets/fonts/static/Inter-Regular.ttf) format("ttf");
+  src: url(/assets/fonts/static/Inter-Regular.ttf);
 }
 
 * {
